--- a/sample-integrations/superapp-demo/ui/public/index.html
+++ b/sample-integrations/superapp-demo/ui/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Streaming Lottery App</title>
+    <title>Flow Lottery SuperApp</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap"
       rel="stylesheet"
